--- a/report.bib
+++ b/report.bib
@@ -60,7 +60,7 @@
  annote = "weight distributions"
 }
 
-@misc{noise+adaptive,
+@misc{feldman,
  author    = "Jon Feldman, Ibrahim Abou-Faycal, Matteo Frigo",
  title     = "A Noise-Adaptive Algorithm for First-Order Reed-Muller Decoding",
  publisher = " ",
@@ -93,7 +93,7 @@
  annote = "Whether a vector is far enough from codewrods by testing a small number of bits. "
 }
 
-@conference{kabatiansky2006list,
+@conference{kabatiansky,
   title={{List decoding of first order Reed-Muller codes II}},
   author={Kabatiansky, G. and Tavernier, C.},
   booktitle={Tenth International Workshop on Algebraic and Combinatorial Coding Theory, ACCT},
@@ -101,7 +101,7 @@
   year={2006}
 }
 
-@conference{dumer2008complexity,
+@conference{dumer,
   title={{On complexity of decoding Reed-Muller codes within their code distance}},
   author={Dumer, I. and Kabatiansky, G. and Tavernier, C. and Le Plessis Robinson, F.},
   booktitle={Proc. Eleventh International Workshop on Algebraic and Combinatorial Coding Theory},
@@ -154,7 +154,7 @@
   publisher={Cambridge Univ Pr}
 }
 
-@book{assmus1994designs,
+@book{assmus,
   title={{Designs and their Codes}},
   author={Assmus, EF and Key, JD},
   year={1994},
@@ -200,7 +200,7 @@
  annote = "Johnson proof"
 }
 
-@article{kasami,
+@article{kasami+tokura,
   title={{On the weight structure of Reed-Muller codes}},
   author={Kasami, T. and Tokura, N.},
   journal={IEEE Transactions on Information Theory},
